[package]
name = "rakrs"
version = "1.0.0"
authors = ["Bavfalcon9"]
edition = "2021"

[features]
default = [ "async_tokio" ]
mcpe = []
debug = []
async_std = [ "async-std" ]
async_tokio = [ "tokio" ]

[dependencies]
rand = "0.8.3"
binary_utils = { git = "https://github.com/NetrexMC/BinaryUtil", branch = "master" }
netrex_events = { git = "https://github.com/NetrexMC/Events", branch = "master" }
tokio = { version = "1.15.0", features = ["full"], optional = true }
byteorder = "1.4.3"
futures = "0.3.19"
futures-executor = "0.3.19"
async-std = { version = "1.10.0", optional = true }
