[package]
name = "rakrs"
version = "0.3.0-rc.3"
authors = ["Bavfalcon9 <olybear9@gmail.com>"]
edition = "2021"

[features]
default = [ "async_std" ]
mcpe = []
debug = []
debug_all = []
async_std = [ "async-std" ]
async_tokio = [ "tokio" ]

[dependencies]
rand = "0.8.3"
binary_utils = { git = "https://github.com/NetrexMC/BinaryUtil", tag = "v0.2.2" }
tokio = { version = "1.15.0", features = ["full"], optional = true }
byteorder = "1.4.3"
futures = "0.3.19"
futures-executor = "0.3.19"
async-std = { version = "1.10.0", optional = true, features = [ "unstable" ] }
