[package]
name = "rakrs_test"
version = "0.1.0"
authors = ["Bavfalcon9"]
edition = "2018"

[dependencies]
tokio = { version = "1.7.1", features = [ "net" , "sync", "rt" ] }
rand = "0.8.3"
binary_utils = { git = "https://github.com/NetrexMC/BinaryUtil", branch = "master" }
async-trait = "0.1.50"
rakrs = { path = "../" }