[package]
name = "rakrs-test"
version = "1.0.0"
authors = ["Bavfalcon9"]
edition = "2021"
private = true

[dependencies]
rakrs = { path = "../", features = ["mcpe", "debug"] }
tokio = { version = "1.15.0", features = ["full"] }
netrex_events = { git = "https://github.com/NetrexMC/Events", branch = "master" }
