[package]
name = "rak-rs-test"
version = "0.1.0"
authors = ["GoodLucky777"]
edition = "2021"
description = "An exmaple code to reproduce the rak-rs bug."
publish = false

[dependencies]
console-subscriber = "0.2.0"
rak-rs = { path = '../../', default-features = false, features = [ "async_tokio", "mcpe", "debug" ] }
tokio = { version = "1.36.0", features = ["full", "tracing"] }
