[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = [ "unstable", "attributes" ] }
binary-util = "0.3.4"
rak-rs = { path = "../../../", features = [ "debug", "debug_all", "async-std", "mcpe"]}