[package]
name = "raknet-server-async-std"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = [ "attributes" ] }
console-subscriber = "0.1.8"
rak-rs = { path = "../../../", features = [ "debug", "debug_all", "mcpe", "async_std" ], default-features = false }
# rak-rs = { path = "../../../", features = [ "mcpe" ] }
